--- a/OnlineExamination/Pages/QuestionsBank/List.cshtml
+++ b/OnlineExamination/Pages/QuestionsBank/List.cshtml
@@ -51,7 +51,7 @@
             </tr>
             <tr>
                 <td colspan="4">
-                    <span style="font-weight:bold">Answer :</span>@Html.DisplayFor(modelItem => item.Option1)
+                    <span style="font-weight:bold">Answer :</span>@Html.DisplayFor(modelItem => item.Answer)
                 </td>
             </tr>
         </tbody>
