ADD ManageStudents class

--- a/OnlineExamination/Pages/Admin/Managers.cshtml
+++ b/OnlineExamination/Pages/Admin/Managers.cshtml
@@ -2,7 +2,7 @@
 @model OnlineExamination.Pages.Admin.ManagersModel
 @{
 }
-<table class="table" style="border-block-color:blueviolet" border="1">
+<table class="table" style="border-color:blueviolet" border="1">
     <tr>
         <td class="font-italic" style="border:solid">Name</td>
         <td class="font-italic" style="border:solid">User Name</td>
