--- a/OnlineExamination/Pages/Shared/_Layout.cshtml
+++ b/OnlineExamination/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         @if (User.IsInRole("Manager"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-page="">Students</a>
+                                <a class="nav-link" asp-area="" asp-page="/Students/List">Students</a>
                             </li>
 
                             <li class="nav-item">
