--- a/OnlineExamination/Pages/Shared/_Layout.cshtml
+++ b/OnlineExamination/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                     Create
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-area="" asp-page="">Student</a>
+                                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Student</a>
                                     <a class="dropdown-item" asp-area="" asp-page="">Exam</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/QuestionsBank/Edit">Question</a>
                                 </div>
