--- a/OnlineExamination/Pages/ExamCreation/CreateExam.cshtml
+++ b/OnlineExamination/Pages/ExamCreation/CreateExam.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div>
         <label asp-for="@Model.NomOfQuestions">Number Of Questions</label>
-        <input asp-for="@Model.NomOfQuestions" class="form-control" />
+        <input asp-for="@Model.NomOfQuestions" class="form-control" min="1" required/>
     </div>
     <div>
         <label asp-for="exam.Duration">Duration</label>
@@ -20,7 +20,7 @@
     <div class="form-group row">
         <label for="example-datetime-local-input" class="col-2 col-form-label">Exam Start</label>
         <div class="col-10">
-            <input asp-for="exam.ExamStart" class="form-control" type="datetime-local" value="2011-08-19T13:45:00" id="example-datetime-local-input">
+            <input asp-for="exam.ExamStart" class="form-control" type="datetime-local" value="2021-05-20T13:45:00" id="example-datetime-local-input">
         </div>
     </div>
         <div>
