Update Manage Student

--- a/OnlineExamination/Pages/Students/List.cshtml
+++ b/OnlineExamination/Pages/Students/List.cshtml
@@ -9,7 +9,7 @@
     <p class="text-center font-weight-bold">No Students are availabe !</p>
 }
 <p>
-    <a asp-page="/Students/Edit" class="btn btn-primary">Create New</a>
+    <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
