--- a/OnlineExamination/Pages/Students/Delete.cshtml
+++ b/OnlineExamination/Pages/Students/Delete.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this Question?</h3>
+<h3>Are you sure you want to delete this Student?</h3>
 <div>
     <dl class="dl-horizontal">
         <dt>
