--- a/OnlineExamination/Pages/ExamCreation/CreateExam.cshtml
+++ b/OnlineExamination/Pages/ExamCreation/CreateExam.cshtml
@@ -31,9 +31,8 @@
             <label asp-for="exam.passMark">Pass Mark</label>
             <input asp-for="exam.passMark" class="form-control" />
         </div>
-        <button type="submit" class="btn-primary">Save</button>
+        <div class="form-group" style="margin-top:15px">
+            <input type="submit" value="Save" class="btn btn-info" />
+            <a asp-page="/Students/List" class="btn btn-outline-info">Back to List</a>
+        </div>
 </form>
-
-@*<a asp-page="/UniversityPages/List" class="btn btn-primary" style="margin-top:20px">
-        Back to universities
-    </a>*@
