--- a/OnlineExamination/Pages/Shared/_Layout.cshtml
+++ b/OnlineExamination/Pages/Shared/_Layout.cshtml
@@ -55,6 +55,16 @@
                                 </div>
                             </li>
                         }
+                        @if (User.IsInRole("User"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/ExamCreation/StartExam">Exams</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/ExamCreation/ExamDegrees">Degrees</a>
+                            </li>
+                         }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
