--- a/OnlineExamination/Pages/Shared/_Layout.cshtml
+++ b/OnlineExamination/Pages/Shared/_Layout.cshtml
@@ -61,9 +61,9 @@
                                 <a class="nav-link" asp-area="" asp-page="/ExamCreation/StartExam">Exams</a>
                             </li>
 
-                            <li class="nav-item">
+                            @*<li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-page="/ExamCreation/ExamDegrees">Degrees</a>
-                            </li>
+                            </li>*@
                          }
                     </ul>
                     <partial name="_LoginPartial" />
