--- a/OnlineExamination/Pages/Students/Details.cshtml
+++ b/OnlineExamination/Pages/Students/Details.cshtml
@@ -39,6 +39,16 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Student.examStatus)
         </dd>
+        @if (Model.Student.ImagePath != null)
+        {
+            <dt class="col-sm-2">
+                <br />
+                Image Profile
+            </dt>
+            <dd class="col-sm-10">
+                <img src=" /Uploads/@Html.DisplayFor(model => model.Student.ImagePath)" style="width:100px" class="img-thumbnail" />
+            </dd>
+        }
     </dl>
 </div>
 <div>
