--- a/OnlineExamination/Pages/Students/Edit.cshtml
+++ b/OnlineExamination/Pages/Students/Edit.cshtml
@@ -8,9 +8,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Student.Id" />
+            <input type="hidden" asp-for="Student.ImagePath" />
             <div class="form-group">
                 <label asp-for="Student.Name" class="control-label"></label>
                 <input asp-for="Student.Name" class="form-control" />
@@ -33,6 +34,15 @@
                     <option value="Female">Female</option>
                 </select>
                 <span asp-validation-for="Student.Gender" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RefFile" class="control-label">Select Profile Image</label>
+                <input type="file" asp-for="RefFile" class="form-control" />
+                <span asp-validation-for="RefFile" class="text-danger"></span>
+                @if (Model.Student.ImagePath != null)
+                {
+                    <img src=" /Uploads/@Html.DisplayFor(modelItem => Model.Student.ImagePath)" style="width:80px" class="img-thumbnail" />
+                }
             </div>
             <div class="form-group">
                 <label asp-for="Student.examMark" class="control-label"></label>
