--- a/OnlineExamination/Pages/Students/List.cshtml
+++ b/OnlineExamination/Pages/Students/List.cshtml
@@ -21,6 +21,9 @@
                 @Html.DisplayNameFor(model => model.Students.Students[0].Email)
             </th>
             <th>
+                Profile Image
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Students.Students[0].PhoneNumber)
             </th>
             <th>
@@ -44,6 +47,12 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @if (item.ImagePath != null)
+                     { 
+                        <img src=" /Uploads/@Html.DisplayFor(modelItem => item.ImagePath)" style="width:80px" class="img-thumbnail" />
+                     }
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
